--- a/templates/projects.html
+++ b/templates/projects.html
@@ -7,7 +7,7 @@
     <div class="row">
         {% for project in data.projects %}
         <div class="col-lg-6 mb-5">
-            <div class="card h-100 shadow-lg">
+            <div class="card h-100 shadow-lg modern-card">
                 <div class="card-img-top bg-dark text-light d-flex align-items-center justify-content-center" 
                      style="height: 250px; background: linear-gradient(135deg, #{{ ['667eea', 'f093fb', '4facfe', '43e97b'][loop.index0 % 4] }} 0%, #{{ ['764ba2', 'f5576c', '00f2fe', '38f9d7'][loop.index0 % 4] }} 100%);">
                     <i class="fas fa-{{ ['laptop-code', 'mobile-alt', 'database', 'server'][loop.index0 % 4] }} fa-4x"></i>
